test/files/neg/delayed-init-ref.check
delayed-init-ref.scala:17: warning: Selecting value vall from object O, which extends scala.DelayedInit, is likely to yield an uninitialized value
  println(O.vall)     // warn
            ^
delayed-init-ref.scala:19: warning: Selecting value vall from object O, which extends scala.DelayedInit, is likely to yield an uninitialized value
  println(vall)       // warn
          ^
delayed-init-ref.scala:28: warning: trait DelayedInit in package scala is deprecated: DelayedInit semantics can be surprising.
(For details and a proposed alternative, see https://issues.scala-lang.org/browse/SI-4330?jql=labels%20%3D%20delayedinit%20AND%20resolution%20%3D%20unresolved. Support for `App` will continue.)
trait Before extends DelayedInit {
                     ^
delayed-init-ref.scala:40: warning: Selecting value foo from trait UserContext, which extends scala.DelayedInit, is likely to yield an uninitialized value
    println({locally(()); this}.foo)  // warn (spurious, but we can't discriminate)
                                ^
error: No warnings can be incurred under -Xfatal-warnings.
four warnings found
one error found
